# cri-o

./: .clang-format  .codecov.yml  .coderabbit.yaml  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .golangci.yml  .markdownlint.yaml  .packit.yaml  .papr.yml  .papr_first.sh  .papr_second.sh  .papr_third.sh  .prettierignore  .snyk  .travis.yml  .typos.toml  ADOPTERS.md  AGENTS.md  ANNOTATION_MIGRATION.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Dockerfile  Dockerfile-circleci  Dockerfile-nix  GOVERNANCE.md  HACKING.md  LICENSE  MAINTAINERS.md  Makefile  Makefile.am  Makefile.inc  OWNERS  OWNERS_ALIASES  README.md  SECURITY.md  SECURITY_CONTACTS  VERSION  (+203 more)
.circleci/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.muse/: config.toml
.tool/: check-license  lint
Godeps/: Godeps.json
_layouts/: default.html
_posts/: dependencies.md
bundle/: Makefile  README.md  build  test  vars
client/: client.go
conmon/: Makefile  Makefile.am  cmsg.c  config.h  conmon.c  ctr_logging.c  ctr_logging.h  pollset.c  pollset.h  utils.c  utils.h
contrib/: policy.json
debian/: changelog  control  copyright  rules
docs/: crio-status.8.md  crio.8.md  crio.conf.5.md  crio.conf.d.5.md  kpod-diff.1.md  kpod-exec.1.md  kpod-history.1.md  kpod-images.1.md  kpod-import.1.md  kpod-info.1.md  kpod-inspect.1.md  kpod-launch.1.md  kpod-load.1.md  kpod-mount.1.md  kpod-pause.1.md  kpod-ps.1.md  kpod-pull.1.md  kpod-push.1.md  kpod-rmi.1.md  kpod-save.1.md  kpod-stop.1.md  kpod-tag.1.md  kpod-umount.1.md  kpod-unpause.1.md  kpod-version.1.md  kpod.1.md  ocid.8.md  ocid.conf.5.md
hack/: .vendor-helpers.sh  btrfs_installed_tag.sh  btrfs_tag.sh  build-rpms.sh  check-nri-bats-tests.sh  find-godeps.sh  go-install.sh  govulncheck.sh  install-golangci-lint.sh  libdm_installed.sh  libdm_no_deferred_remove_tag.sh  libsubid_tag.sh  log-capitalized.sh  openpgp_tag.sh  seccomp_tag.sh  selinux_tag.sh  tree_status.sh  validate-config.sh  vendor.sh
lib/: config.go  config_linux.go  config_test.go  config_unix.go  config_unsupported.go  config_windows.go  conmonmon.go  container.go  container_server.go  container_server_linux.go  container_server_test.go  container_server_test_inject.go  container_server_unsupported.go  hooks.go  kill.go  kill_test.go  logs.go  logs_test.go  pause.go  pause_test.go  remove.go  remove_test.go  rename.go  rename_test.go  stats.go  stats_linux.go  stop.go  stop_test.go  suite_test.go  wait.go  wait_test.go
libkpod/: attach.go  config.go  container.go  containerData.go  container_data.go  container_server.go  containerserver.go  create.go  diff.go  exec.go  kill.go  logs.go  naming.go  pause.go  remove.go  rename.go  stats.go  stop.go  wait.go
libpod/: config.go  container.go  container_attach.go  container_data.go  container_server.go  copy_data.go  copy_ref.go  diff.go  errors.go  image.go  oci.go  options.go  pod.go  runtime.go  runtime_ctr.go  runtime_img.go  runtime_pod.go  state.go  storage.go  util.go
logo/: LICENSE
manager/: config.go  container.go  container_create.go  container_execsync.go  container_list.go  container_remove.go  container_start.go  container_status.go  container_stop.go  image_list.go  image_pull.go  image_remove.go  image_status.go  manager.go  runtime_status.go  sandbox.go  sandbox_list.go  sandbox_remove.go  sandbox_run.go  sandbox_status.go  sandbox_stop.go  server.go  utils.go  version.go
nix/: default-amd64.nix  default-arm64.nix  default-ppc64le.nix  default-s390x.nix  default.nix  derivation.nix  nixpkgs.json  nixpkgs.nix  overlay.nix  rust.nix  static.nix
oci/: attach.go  container.go  container_test.go  container_test_inject.go  finished.go  finished_32.go  finished_unsupported.go  history.go  history_test.go  kill.go  memory_store.go  memory_store_test.go  oci.go  oci_linux.go  oci_test.go  oci_unix.go  oci_windows.go  runtime.go  runtime_oci.go  runtime_v1.go  runtime_vm.go  stats.go  store.go  suite_test.go
pause/: Makefile  pause.c
pinns/: .gitignore  Makefile  Makefile.am  autogen-crun.sh  autogen.sh  configure.ac  pinns.c  utils.h
pinns/src/: pinns.c  sysctl.c  sysctl.h  utils.h
releases/: README.md  v1.0.1.toml  v1.0.9.toml  v1.8.5.toml  v1.9.1.toml  v1.9.2.toml  v1.9.3.toml  v1.9.5.toml  v1.9.6.toml
rust/: Cargo.toml  build.rs
scripts/: automated-patch-releases.md  build-test-image  ci-setup-local-registry.sh  ci.md  circle-setup  circle-setup-cgroup_manager  ensure-rust-lib  get  github-actions-packages  github-actions-setup  latest_version.go  mod-selinux.sh  node_e2e_installer  obs  setup-local-registry.sh  setup_storage  sign-artifacts  upload-artifacts  verify-local-registry-usage.sh  version_bump.go  versions
server/: artifacts_test.go  config.go  config_libpod.go  config_test.go  config_unix.go  config_windows.go  const.go  container.go  container_attach.go  container_attach_test.go  container_checkpoint.go  container_checkpoint_test.go  container_create.go  container_create_common.go  container_create_freebsd.go  container_create_generic.go  container_create_gomaxprocs_test.go  container_create_linux.go  container_create_linux_test.go  container_create_test.go  container_create_unsupported.go  container_events.go  container_events_test.go  container_exec.go  container_exec_test.go  container_exec_unix.go  container_exec_windows.go  container_execsync.go  container_execsync_test.go  container_list.go  container_list_test.go  container_portforward.go  container_portforward_test.go  container_remove.go  container_remove_linux.go  container_remove_test.go  container_remove_unsupported.go  container_reopen_log.go  container_reopen_log_test.go  container_restore.go  (+119 more)
test/: README.md  add_annotation.bats  annotation_migration.bats  apparmor.bats  artifact_additional_stores.bats  blobcache.bats  cdi.bats  cert.bats  cgroups.bats  checkpoint-restore-pod-test.README.md  checkpoint-restore-pod-test.sh  checkpoint.bats  cni_plugin_helper.bash  command.bats  common.sh  config.bats  config_migrate.bats  conmon-vs-conmonrs.bats  conmon.bats  conmon_track.bats  (+121 more)
(+1514 files in other folders)
